<resources>
    <string name="app_name">Mi Nota</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_titulo">Titulo</string>
    <string name="txt_descripcion">Descripcion</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="fab_nota">Nota</string>
    <string name="fab_tarea">Tarea</string>
    <string name="lbl_tarea">Tarea</string>
    <string name="lbl_nota">Nota</string>
    <string name="lbl_vencimiento">Vencimiento</string>
    <string name="lbl_repecticion">Repeticion</string>
    <string name="lbl_aviso">Aviso</string>
    <string name="lbl_add_aviso">Añadir recordatorio</string>
    <string name="lbl_tarea_add">Tarea</string>
    <string name="lbl_nota_add">Nota</string>
    <string name="itm_camara">Camara</string>
    <string name="itm_audio">Audio</string>
</resources>
