<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sandra.finalminota.MainActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_margin="@dimen/fab_margin"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

           <TextView
                android:id="@+id/lbl_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/icons"
                android:text="@string/lbl_tarea"
                android:textColor="@color/primary_light"
                android:textSize="22dp"
               />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_tituloT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_titulo" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/lbl_vencimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_vencimiento"
                android:textSize="20dp"
                android:layout_marginTop="@dimen/fab_margin"/>

            <Button
                android:id="@+id/btn_fechaT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ninguno"
                android:background="@color/colorPrimaryDark"
                android:layout_margin="@dimen/button_margin"
                android:padding="@dimen/button_margin"
                android:textColor="@color/primary_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_repecticion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/lbl_repecticion"
                    android:textSize="20dp"
                    />

                <Spinner
                    android:id="@+id/spn_repeticion"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="188dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/txt_descripcionT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/txt_descripcion"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/lbl_aviso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:text="@string/lbl_aviso"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_aviso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:fabSize="mini"
                    app:backgroundTint="@color/icons"
                    app:srcCompat="@android:drawable/ic_menu_add" />

                <TextView
                    android:id="@+id/lbl_add_aviso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/lbl_add_aviso"
                    android:textSize="20dp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/fab_margin">

                <Button
                    android:id="@+id/btn_guardarT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_guardar"
                    android:background="@color/colorPrimaryDark"
                    android:layout_margin="@dimen/button_margin"
                    android:padding="@dimen/button_margin"
                    android:textColor="@color/primary_light"/>

                <Button
                    android:id="@+id/btn_cancelarT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_cancelar"
                    android:background="@color/colorPrimaryDark"
                    android:layout_margin="@dimen/button_margin"
                    android:padding="@dimen/button_margin"
                    android:textColor="@color/primary_light"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
