<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sandra.finalminota.Fragment_Nota">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_nota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/icons"
                android:text="@string/lbl_nota"
                android:textColor="@color/primary_light"
                android:textSize="22dp"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/txt_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txt_titulo" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="188dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/txt_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/txt_descripcion"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcy_lista_fotos"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcy_lista_fotos_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/fab_margin"
                android:paddingLeft="@dimen/centrar_margin"
                >

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/img_camara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:padding="@dimen/button_margin"
                    app:backgroundTint="@color/icons"
                    app:fabSize="normal"
                    app:srcCompat="@drawable/camera" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/img_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:padding="@dimen/button_margin"
                    app:backgroundTint="@color/icons"
                    app:fabSize="normal"
                    app:srcCompat="@drawable/camcorder" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/img_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:padding="@dimen/button_margin"
                    app:backgroundTint="@color/icons"
                    app:fabSize="normal"
                    app:srcCompat="@drawable/microphone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/fab_margin">

                <Button
                    android:id="@+id/btn_guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_guardar"
                    android:background="@color/colorPrimaryDark"
                    android:layout_margin="@dimen/button_margin"
                    android:padding="@dimen/button_margin"
                    android:textColor="@color/primary_light"/>

                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_cancelar"
                    android:background="@color/colorPrimaryDark"
                    android:layout_margin="@dimen/button_margin"
                    android:padding="@dimen/button_margin"
                    android:textColor="@color/primary_light"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
